# ReMastera

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PRIVACY.md  Package.swift  README.md  RELEASE.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  project.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Assets/: AppIcon.icns
Design/: brand.md  icon-direction.md
Design/demo/: README.md
Design/screenshots/: README.md
Sources/AppMain/: AppMain.swift
Sources/ReMastera/: ReMasteraApp.swift
Sources/ReMastera/Core/: Job.swift  JobStatus.swift  ModelScanner.swift  Pipeline.swift  PipelineContext.swift  PipelineStage.swift  Preset.swift  QueueManager.swift
Sources/ReMastera/Enhancement/: DenoiseStage.swift  EncodeStage.swift  FilmLookStage.swift  SubtitleStage.swift
Sources/ReMastera/Tools/: DependencyDetector.swift  ExternalToolRunner.swift
Sources/ReMastera/UI/: DashboardView.swift  DependencyView.swift  DesignSystem.swift  PrivacyView.swift  QueueView.swift  RemyMascot.swift  SettingsView.swift  SidebarView.swift  WelcomeAssistantView.swift
Sources/ReMasteraCLI/: main.swift
Sources/ReMasteraTests/: main.swift
Tests/ReMasteraTests/: main.swift
cli/: pyproject.toml
cli/remastera_tui/: app.py  cli.py  runner.py
cli/remastera_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bootstrap.sh  build.sh  check-dependencies.sh  e2e-test.sh  install-and-run.sh  install-cli.sh  install-dependencies.sh  package.sh  test.sh
(+3 files in other folders)
