[project]
name = "remastera-tui"
version = "0.1.0"
description = "A beautiful TUI for ReMastera macOS Media Suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.76.0",
]

[project.scripts]
remastera = "remastera_tui.cli:app"
